# gmailnotify

./: .hgsub  .hgsubstate  CMakeLists.txt  README  TRANSLATORS  config.inc  definitions.h  gmailnotify.cpp  gmailnotify.h  gmailnotify.pri  gmailnotify.pro  igmailnotify.h  install.inc  notifygmaildialog.cpp  notifygmaildialog.h  notifygmaildialog.ui  translations.inc
documents/: CHANGELOG  README  TRANSLATORS
resources/menuicons/shared/: gmailnotify.def.xml
translations/.tx/: config
translations/de/: gmailnotify.ts
translations/en/: gmailnotify.ts
translations/es/: gmailnotify.ts
translations/pl/: gmailnotify.ts
translations/ru/: gmailnotify.ts
translations/ru_RU/: gmailnotify.ts
translations/src/pl_PL/: gmailnotify.ts
translations/src/ru_RU/: gmailnotify.ts
translations/uk/: gmailnotify.ts
